charts/hub/ocp-srv-install/templates/plant-manager-service/plant-manager-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plant-manager-service
spec:
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcp-external
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: plant-manager-service
    deploymentconfig: plant-manager-service
  sessionAffinity: None
  type: ClusterIP
