charts/hub/ocp-srv-install/templates/plant-manager-service/plant-manager-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: plant-manager-service
spec:
  port:
    targetPort: tcp-external
  tls:
    termination: passthrough
  wildcardPolicy: None
  to:
    kind: Service
    name: plant-manager-service
    weight: 100
  wildcardPolicy: None
